<resources>
    <string name="app_name">NextLounge</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="intro_text">Relax, grab some drinks, eat something be productive, or just get away from it all. The Next Lounge would be here to help you</string>
    <string name="lounge">Lounge</string>
    <string name="log_in">Log In</string>
    <string name="login_msg">Fill in the email and password you registered with to access your account</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_msg">Please provide the following details</string>
    <string name="username">Username</string>
    <string name="terms_and_conditions"> Terms and Conditions</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="have_an_account">Have an account?</string>
    <string name="new_order">New Order</string>
    <string name="log_out">Log Out</string>
    <string name="specials">Specials</string>
    <string name="pending_order">Pending Order</string>
    <string name="active_order">Active Order</string>
    <string name="menu">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="process_order">Process Order</string>
    <string name="table_number">Table number:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="make_payment">Make Payment</string>
    <string name="create_order">Create Order</string>
    <string name="add_more">Add more</string>
    <string name="order_summary">Order Summary</string>
    <string name="paid">Paid</string>
    <string name="print_bill">Print Bill</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="payment_type">Payment type</string>
    <string name="cash_payment">Cash payment</string>
    <string name="card_payment">Card payment</string>
    <string name="print_bill_transaction">Print the Bill for this Transaction</string>
    <string name="payment_received">Payment Received</string>
    <string name="i_affirm_that_i">I affirm that I</string>
    <string name="concluded_this_transaction">concluded this transaction</string>
    <string name="order_type">Order type</string>
    <string name="select_table_number">Select Table number</string>
    <string name="search_food">Search Food</string>
    <string name="add_to_order">Add to Order</string>
    <string name="ok">OK</string>
    <string name="your_food_basket_is_empty">Your Food basket is empty</string>
    <string name="amount">Amount</string>

    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_cvv_code">xxx</string>
    <string name="label_card_pin">xxxx</string>
    <string name="cvv">CVV</string>
    <string name="card_pin">card PIN</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cont">Continue</string>
    <string name="qty">Qty:</string>
    <string name="pos_payment">POS payment</string>

</resources>
