<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:minWidth="380dp"
    android:layout_margin="10sp"
    android:background="@drawable/rectangle_white_shadow">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_payment"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/orange"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_type"
        android:layout_marginTop="10dp"
        android:textSize="17sp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_payment"
            android:buttonTint="@color/orange"
            android:textSize="17sp"/>
        <RadioButton
            android:id="@+id/radioCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_payment"
            android:layout_marginLeft="24sp"
            android:buttonTint="@color/orange"
            android:layout_marginStart="24sp"
            android:textSize="17sp"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/orange"
        android:text="@string/print_bill_transaction"/>

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/payment_received"
        android:textColor="@color/white"
        android:background="@drawable/rectangle_orange"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="50sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_affirm_that_i"/>
        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="Chilex"
            android:textStyle="bold"
            android:textColor="@color/orange"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concluded_this_transaction"/>
    </LinearLayout>

</LinearLayout>