<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/background_log"/>

    <include layout="@layout/logo"
        android:id="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:padding="8dp"
        android:textSize="24sp"
        android:textColor="@color/orange"/>
    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:padding="8dp"
        android:textColor="@color/white"/>
<LinearLayout
    android:id="@+id/linearBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="20sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text1"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_address"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rectangle_white"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:button="@drawable/ic_check_circle"
            android:checked="false"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
    
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@+id/linearBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20sp"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</android.support.constraint.ConstraintLayout>