<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProcessOrderFragment">

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="0dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rectangle_white_shadow"
        android:layout_height="65dp">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_order"
            android:layout_centerInParent="true"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid"
            android:visibility="gone"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="19sp"
            android:textColor="@color/orange"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <include
        android:id="@+id/view"
        layout="@layout/template_recyclerview"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:padding="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/linearTable"/>

    <LinearLayout
        android:id="@+id/linearTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearAmount"
        app:layout_constraintVertical_bias="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_number"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/textTableNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameButton">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/textTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="20sp"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameButton"
        android:layout_width="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonPay"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_orange"
            android:text="@string/make_payment"
            android:textColor="@color/white"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/buttonPrintBill"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone"
            android:background="@drawable/rectangle_white_orange"
            android:text="@string/print_bill"
            android:textColor="@color/orange"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/relativeEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_food_basket_is_empty"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cart"
            android:textSize="18sp"
            android:textColor="@color/orange"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_centerInParent="true"
            android:src="@drawable/ic_chart"/>
    </RelativeLayout>
    <include layout="@layout/template_progress"/>
</android.support.constraint.ConstraintLayout>