<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OrderSummaryFragment">
    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="0dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rectangle_white_shadow"
        android:layout_height="65dp">
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:layout_centerInParent="true"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_more"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#585858"
        app:layout_constraintTop_toBottomOf="@+id/relativeHeader"/>
    <include
        android:id="@+id/view"
        layout="@layout/template_recyclerview"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/linearTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintBottom_toTopOf="@+id/linearAmount"
        app:layout_constraintVertical_bias="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_number"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/textTableNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPay">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/textTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonPay"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rectangle_orange"
        android:text="@string/create_order"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="20sp"
        android:padding="10dp"/>
</android.support.constraint.ConstraintLayout>